# jcodemunch-mcp

./: AGENT_HOOKS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  INSTALL_FROM_SOURCE.md  QUICKSTART.md  README.md  SPEC.md  TOKEN_SAVINGS.md  USER_GUIDE.md  pyproject.toml
benchmarks/: profile_backpressure.py  profile_config_regression.py  profile_language_filter.py
cli/: README.md
docs/superpowers/plans/: 2026-03-23-cross-platform-path-remap.md
docs/superpowers/specs/: 2026-03-23-cross-platform-path-remap-design.md
src/jcodemunch_mcp/: config.py  path_map.py  security.py  server.py  watcher.py
src/jcodemunch_mcp/parser/: extractor.py  imports.py  languages.py
src/jcodemunch_mcp/parser/context/: base.py  dbt.py
src/jcodemunch_mcp/storage/: index_store.py  sqlite_store.py  token_tracker.py
src/jcodemunch_mcp/summarizer/: batch_summarize.py
src/jcodemunch_mcp/tools/: _indexing_pipeline.py  get_symbol.py  index_folder.py  search_columns.py  search_symbols.py
tests/: __init__.py  test_cleanup.py  test_config.py  test_deferred_summarization.py  test_path_map.py  test_provider_metadata_and_perf.py  test_razor.py  test_server.py  test_tools.py
tests/fixtures/razor/: dotnet_aspnetcore_layout.cshtml  sample.cshtml
