[project]
name = "jcodemunch-mcp"
version = "0.2.11"
description = "Token-efficient MCP server for source code exploration via tree-sitter AST parsing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0,<1.10.0",
    "httpx>=0.27.0",
    "tree-sitter-language-pack>=0.7.0,<1.0.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
gemini = ["google-generativeai>=0.8.0"]
all = ["anthropic>=0.40.0", "google-generativeai>=0.8.0"]
test = ["pytest", "pytest-asyncio", "pytest-cov"]

[project.scripts]
jcodemunch-mcp = "jcodemunch_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jcodemunch_mcp"]

[tool.hatch.build.targets.sdist]
exclude = [".claude/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
